third_party/move/move-compiler-v2/tests/folding/unfoldable_constants_blocks.exp

Diagnostics:
error: Invalid expression in `const`. Operator shl (<<) result value out of range for u8
  ┌─ tests/folding/unfoldable_constants_blocks.move:4:9
  │
4 │         (1: u8) << 8;
  │         ^^^^^^^^^^^^

error: Invalid expression in `const`. Operator shl (<<) result value out of range for u64
  ┌─ tests/folding/unfoldable_constants_blocks.move:5:9
  │
5 │         (1: u64) << 64;
  │         ^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator shl (<<) result value out of range for u128
  ┌─ tests/folding/unfoldable_constants_blocks.move:6:9
  │
6 │         (1: u128) << 128;
  │         ^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator shl (<<) result value out of range for u16
  ┌─ tests/folding/unfoldable_constants_blocks.move:7:9
  │
7 │         (1: u16) << 16;
  │         ^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator shl (<<) result value out of range for u32
  ┌─ tests/folding/unfoldable_constants_blocks.move:8:9
  │
8 │         (1: u32) << 32;
  │         ^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator div (/) result value out of range for u8
   ┌─ tests/folding/unfoldable_constants_blocks.move:16:9
   │
16 │         (1: u8) / 0;
   │         ^^^^^^^^^^^

error: Invalid expression in `const`. Operator div (/) result value out of range for u64
   ┌─ tests/folding/unfoldable_constants_blocks.move:17:9
   │
17 │         (1: u64) / 0;
   │         ^^^^^^^^^^^^

error: Invalid expression in `const`. Operator div (/) result value out of range for u128
   ┌─ tests/folding/unfoldable_constants_blocks.move:18:9
   │
18 │         (1: u128) / 0;
   │         ^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator div (/) result value out of range for u16
   ┌─ tests/folding/unfoldable_constants_blocks.move:19:9
   │
19 │         (1: u16) / 0;
   │         ^^^^^^^^^^^^

error: Invalid expression in `const`. Operator div (/) result value out of range for u32
   ┌─ tests/folding/unfoldable_constants_blocks.move:20:9
   │
20 │         (1: u32) / 0;
   │         ^^^^^^^^^^^^

error: Invalid expression in `const`. Operator div (/) result value out of range for u256
   ┌─ tests/folding/unfoldable_constants_blocks.move:21:9
   │
21 │         (1: u256) / 0;
   │         ^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator rem (%) result value out of range for u8
   ┌─ tests/folding/unfoldable_constants_blocks.move:23:9
   │
23 │         (1: u8) % 0;
   │         ^^^^^^^^^^^

error: Invalid expression in `const`. Operator rem (%) result value out of range for u64
   ┌─ tests/folding/unfoldable_constants_blocks.move:24:9
   │
24 │         (1: u64) % 0;
   │         ^^^^^^^^^^^^

error: Invalid expression in `const`. Operator rem (%) result value out of range for u128
   ┌─ tests/folding/unfoldable_constants_blocks.move:25:9
   │
25 │         (1: u128) % 0;
   │         ^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator rem (%) result value out of range for u16
   ┌─ tests/folding/unfoldable_constants_blocks.move:26:9
   │
26 │         (1: u16) % 0;
   │         ^^^^^^^^^^^^

error: Invalid expression in `const`. Operator rem (%) result value out of range for u32
   ┌─ tests/folding/unfoldable_constants_blocks.move:27:9
   │
27 │         (1: u32) % 0;
   │         ^^^^^^^^^^^^

error: Invalid expression in `const`. Operator rem (%) result value out of range for u256
   ┌─ tests/folding/unfoldable_constants_blocks.move:28:9
   │
28 │         (1: u256) % 0;
   │         ^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator add (+) result value out of range for u8
   ┌─ tests/folding/unfoldable_constants_blocks.move:30:9
   │
30 │         (255: u8) + 255;
   │         ^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator add (+) result value out of range for u64
   ┌─ tests/folding/unfoldable_constants_blocks.move:31:9
   │
31 │         (18446744073709551615: u64) + 18446744073709551615;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator add (+) result value out of range for u128
   ┌─ tests/folding/unfoldable_constants_blocks.move:32:9
   │
32 │         (340282366920938463463374607431768211450: u128) + 340282366920938463463374607431768211450;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator add (+) result value out of range for u16
   ┌─ tests/folding/unfoldable_constants_blocks.move:33:9
   │
33 │         (65535: u16) + 65535;
   │         ^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator add (+) result value out of range for u32
   ┌─ tests/folding/unfoldable_constants_blocks.move:34:9
   │
34 │         (4294967295: u32) + 4294967295;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator add (+) result value out of range for u256
   ┌─ tests/folding/unfoldable_constants_blocks.move:35:9
   │
35 │         (115792089237316195423570985008687907853269984665640564039457584007913129639935: u256) + 115792089237316195423570985008687907853269984665640564039457584007913129639935;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator sub (-) result value out of range for u8
   ┌─ tests/folding/unfoldable_constants_blocks.move:37:9
   │
37 │         (0: u8) - 1;
   │         ^^^^^^^^^^^

error: Invalid expression in `const`. Operator sub (-) result value out of range for u64
   ┌─ tests/folding/unfoldable_constants_blocks.move:38:9
   │
38 │         (0: u64) - 1;
   │         ^^^^^^^^^^^^

error: Invalid expression in `const`. Operator sub (-) result value out of range for u128
   ┌─ tests/folding/unfoldable_constants_blocks.move:39:9
   │
39 │         (0: u128) - 1;
   │         ^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator sub (-) result value out of range for u16
   ┌─ tests/folding/unfoldable_constants_blocks.move:40:9
   │
40 │         (0: u16) - 1;
   │         ^^^^^^^^^^^^

error: Invalid expression in `const`. Operator sub (-) result value out of range for u32
   ┌─ tests/folding/unfoldable_constants_blocks.move:41:9
   │
41 │         (0: u32) - 1;
   │         ^^^^^^^^^^^^

error: Invalid expression in `const`. Operator sub (-) result value out of range for u256
   ┌─ tests/folding/unfoldable_constants_blocks.move:42:9
   │
42 │         (0: u256) - 1;
   │         ^^^^^^^^^^^^^

error: Invalid expression in `const`. Cast argument value 256 out of range for type u8
   ┌─ tests/folding/unfoldable_constants_blocks.move:44:9
   │
44 │         ((256: u64) as u8);
   │         ^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Cast argument value 340282366920938463463374607431768211450 out of range for type u64
   ┌─ tests/folding/unfoldable_constants_blocks.move:45:9
   │
45 │         ((340282366920938463463374607431768211450: u128) as u64);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Cast argument value 340282366920938463463374607431768211456 out of range for type u128
   ┌─ tests/folding/unfoldable_constants_blocks.move:46:9
   │
46 │         ((340282366920938463463374607431768211456: u256) as u128);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Cast argument value 65536 out of range for type u16
   ┌─ tests/folding/unfoldable_constants_blocks.move:47:9
   │
47 │         ((65536: u64) as u16);
   │         ^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Cast argument value 4294967296 out of range for type u32
   ┌─ tests/folding/unfoldable_constants_blocks.move:48:9
   │
48 │         ((4294967296: u128) as u32);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
