third_party/move/move-compiler-v2/tests/folding/unfoldable_constants_blocks.move
address 0x42 {
module M {
    const NO: u8 = {
        (1: u8) << 8;
        (1: u64) << 64;
        (1: u128) << 128;
        (1: u16) << 16;
        (1: u32) << 32;

        (0: u8) >> 8;
        (0: u64) >> 64;
        (0: u128) >> 128;
        (0: u16) >> 16;
        (0: u32) >> 32;

        (1: u8) / 0;
        (1: u64) / 0;
        (1: u128) / 0;
        (1: u16) / 0;
        (1: u32) / 0;
        (1: u256) / 0;

        (1: u8) % 0;
        (1: u64) % 0;
        (1: u128) % 0;
        (1: u16) % 0;
        (1: u32) % 0;
        (1: u256) % 0;

        (255: u8) + 255;
        (18446744073709551615: u64) + 18446744073709551615;
        (340282366920938463463374607431768211450: u128) + 340282366920938463463374607431768211450;
        (65535: u16) + 65535;
        (4294967295: u32) + 4294967295;
        (115792089237316195423570985008687907853269984665640564039457584007913129639935: u256) + 115792089237316195423570985008687907853269984665640564039457584007913129639935;

        (0: u8) - 1;
        (0: u64) - 1;
        (0: u128) - 1;
        (0: u16) - 1;
        (0: u32) - 1;
        (0: u256) - 1;

        ((256: u64) as u8);
        ((340282366920938463463374607431768211450: u128) as u64);
        ((340282366920938463463374607431768211456: u256) as u128);
        ((65536: u64) as u16);
        ((4294967296: u128) as u32);

        0
    };
}
}
